--- a/index.html
+++ b/index.html
@@ -15,23 +15,123 @@
         .container { max-width: 1100px; width: 100%; padding: 30px; background: var(--bg-gray); border-radius: 40px; }
 
         /* TIPOGRAFÍA */
-        h1, h2, h3, .matrix-name { font-family: 'Playfair Display', serif; font-weight: 700; }
+        h1, h2, h3, 
+.matrix-name { 
+    font-family: 'Playfair Display', serif; 
+    font-size: 25px; /* Aumentado considerablemente (antes 26px) */
+    font-weight: 700;
+    color: #222; /* Un negro un poco más suave */
+}
         .header { text-align: center; margin-bottom: 30px; }
         .header h1 { font-size: 34px; margin: 0; }
         .header p { font-size: 18px; font-weight: 700; font-family: 'Playfair Display'; margin: 5px 0; }
 
         /* GESTIÓN DE MATRICES */
         .matrix-manager { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; margin-bottom: 25px; }
-        .matrix-card { background: var(--white); padding: 20px; border-radius: 30px; border: 1px solid var(--border); position: relative; }
-        .matrix-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
-        .matrix-name { font-size: 26px; }
-        .btn-delete { background: var(--black); color: white; border: none; width: 26px; height: 26px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 14px; }
+      /* TARJETA MÁS COMPACTA Y CENTRADA */
+.matrix-card { 
+    background: var(--white); 
+    padding: 15px; /* Reducido de 20px */
+    border-radius: 30px; 
+    border: 1px solid var(--border); 
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra todo el contenido horizontalmente */
+    text-align: center;
+}
 
-        .matrix-controls { display: flex; gap: 8px; align-items: center; margin-bottom: 15px; font-size: 13px; font-weight: 600; }
-        .matrix-controls input { width: 40px; padding: 4px; border-radius: 8px; border: 1px solid #ddd; text-align: center; }
-        .matrix-grid { display: grid; gap: 6px; justify-content: center; }
-        /* Cambiado a texto para soportar fracciones */
-        .matrix-grid input { width: 50px; height: 40px; text-align: center; border-radius: 10px; border: 1px solid #eee; background: #fafafa; font-weight: 600; font-size: 12px; }
+/* NOMBRE DE LA MATRIZ CENTRADO */
+.matrix-header { 
+    width: 100%;
+    display: flex; 
+    justify-content: center; /* Centra la letra A, B... */
+    align-items: center; 
+    margin-bottom: 5px;
+    position: relative;
+}
+
+/* BOTÓN ELIMINAR A LA ESQUINA PARA NO MOLESTAR */
+/* REEMPLAZA ESTO */
+.btn-delete { 
+    position: absolute;
+    right: 15px; /* Un poco más alejado de la esquina */
+    top: 15px;
+    background: transparent; /* Fondo transparente por defecto */
+    color: #aaa; /* Icono gris sutil */
+    width: 32px; /* Área de clic más grande */
+    height: 32px; 
+    border-radius: 50%; 
+    cursor: pointer; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    font-size: 22px; /* Icono más grande */
+    border: none;
+    transition: all 0.2s ease;
+}
+
+/* NUEVO: Efecto hover moderno (rojo) */
+.btn-delete:hover {
+    background: #fee2e2; /* Fondo rojo muy claro */
+    color: #ef4444; /* Rojo intenso para la X */
+    transform: rotate(90deg); /* Pequeña animación de giro */
+}
+
+/* CONTROLES (3x3) CENTRADOS */
+/* REEMPLAZA ESTO */
+.matrix-controls input { 
+    width: 20px; /* Más anchos */
+    padding: 6px 19px; /* Más espacio interior */
+    border-radius: 12px; /* Bordes más redondeados */
+    border: 1px solid #f0f0f0; /* Borde más grueso y sutil */
+    text-align: center; 
+    font-size: 14px; /* Texto más grande */
+    font-weight: 700;
+    color: #333;
+    background: #fbfbfb;
+    margin-bottom: 15px;
+    transition: all 0.3s ease; /* Transición suave */
+}
+
+/* NUEVO: Efecto al hacer clic en los inputs */
+.matrix-controls input:focus {
+    border-color: #333; /* Borde oscuro al enfocar */
+    background: #fff;
+    outline: none;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+}
+
+/* Ajuste menor para alinear verticalmente el texto 'x' entre los inputs */
+.matrix-controls { align-items: center; font-size: 16px; color: #999; }
+
+
+/* REJILLA COMPACTA */
+.matrix-grid { 
+    display: grid; 
+    gap: 4px; /* Espacio más pequeño entre celdas */
+    justify-content: center;
+    width: fit-content; /* Vital para que no se estire */
+    margin: 0 auto;
+}
+
+/* INPUTS MÁS ESTILIZADOS Y PEQUEÑOS */
+.matrix-grid input { 
+    width: 45px; /* Un poco más estrechos */
+    height: 35px; 
+    text-align: center; 
+    border-radius: 8px; 
+    border: 1px solid #f0f0f0; 
+    background: #fbfbfb; 
+    font-weight: 600; 
+    font-size: 13px;
+    transition: all 0.2s;
+}
+
+.matrix-grid input:focus {
+    background: #fff;
+    border-color: #000;
+    outline: none;
+}
 
         /* OPERACIONES */
         .ops-section { background: var(--white); padding: 25px; border-radius: 35px; border: 1px solid var(--border); margin-bottom: 30px; }
@@ -55,9 +155,31 @@
         .guide-container h3 { margin-top: 0; }
 
         .action-bar { display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; margin-top: 20px; }
-        .pill-btn-white { background: var(--white); border: 1px solid #e0e0e0; border-radius: 50px; padding: 12px 30px; display: flex; align-items: center; gap: 10px; cursor: pointer; font-weight: 700; }
+       /* No importa que diga GUÍA, aquí es donde se controla el estilo de esos botones */
+.pill-btn-white { 
+    background: var(--white); 
+    border: 1px solid #e0e0e0; 
+    border-radius: 50px; 
+    padding: 12px 30px; 
+    display: inline-flex;
+    align-items: center; 
+    justify-content: center; /* Centra el texto dentro del botón */
+    gap: 10px; 
+    cursor: pointer; 
+    font-weight: 700; 
+    margin: 5px 5px; /* <--- ESTA LÍNEA LO CENTRA EN LA PÁGINA */
+    transition: all 0.3s ease; /* <--- ESTA LÍNEA HACE QUE EL EFECTO SEA SUAVE */
+}
 
+/* Agrega esto justo debajo para el efecto de sombra que pediste */
+.pill-btn-white:hover {
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    transform: translateY(-2px);
+    background: #fafafa; /* Un cambio de color muy sutil al tocarlo */
+}
         @media (max-width: 800px) { .dashboard { grid-template-columns: 1fr; } #plot { height: 350px; } }
+ 
+    
     </style>
 </head>
 <body>
